# MiniTileServer

./: .gitignore  CMakeLists.txt  ReadMe.md  client.out  compile.sh  projectfileparsertest
cmake/Modules/: FindCairo.cmake
example_projects/first_project/: project.toml
headers/: bbox.h  color.h  constants.h  geometry.h  layer.h  logging.h  point.h  project.h  source.h  style.h  testHelpers.h  toml.h
src/: UserConfig.c  arrayTest.c  bbox.c  bbox_tests.c  cairoTesting.c  cairoTesting.cpp  client.c  color.c  draw.c  drawPointLayer.c  draw_layer_testing.c  interpolate.c  layer.c  logging.c  main.c  pngReadTest.c  point.c  projectfile_parser.c  ptrTest.c  server.c  source.c  testHelpers.c  toml.c
tests/: all_tests.cc  bbox_tests.cc  color_tests.cc  second_test.cc
